--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,47 +4,70 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-  compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdkVersion rootProject.ext.compileSdkVersion
 
-  defaultConfig {
-    applicationId "com.majesticreader"
-    minSdkVersion rootProject.ext.minSdkVersion
-    targetSdkVersion rootProject.ext.targetSdkVersion
-    versionCode 1
-    versionName "1.0"
-    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-  }
-
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    defaultConfig {
+        applicationId "com.majesticreader"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-  }
+
+    buildTypes {
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation project(':core')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':core')
 
-  // Kotlin
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-  // Support Libraries
-  implementation 'androidx.appcompat:appcompat:1.0.2'
-  implementation 'androidx.core:core-ktx:1.0.2'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
+    // Support Libraries
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
 
-  implementation 'androidx.room:room-runtime:2.1.0'
-  implementation "androidx.room:room-ktx:2.1.0"
+    implementation 'androidx.room:room-runtime:2.1.0'
+    implementation "androidx.room:room-ktx:2.1.0"
 
-  kapt "androidx.room:room-compiler:2.1.0"
+    kapt "androidx.room:room-compiler:2.1.0"
 
-  implementation 'com.github.chrisbanes:PhotoView:2.3.0'
-  implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 
-  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-  implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-  implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
-  implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+
+    implementation "androidx.core:core-ktx:1.7.0-alpha01"
+    implementation "androidx.fragment:fragment-ktx:1.4.0-alpha02"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-alpha04"
+    implementation "androidx.navigation:navigation-ui-ktx:2.4.0-alpha04"
+    implementation "androidx.lifecycle:lifecycle-process:2.4.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.4.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-alpha02"
 }
