--- a/build.gradle
+++ b/build.gradle
@@ -2,52 +2,39 @@
 
 buildscript {
 
-  ext {
-    kotlin_version = '1.3.11'
-    compileSdkVersion = 28
-    targetSdkVersion = 28
-    minSdkVersion = 21
-  }
+    ext {
+        kotlin_version = '1.5.10'
+        compileSdkVersion = 30
+        targetSdkVersion = 30
+        minSdkVersion = 21
+    }
 
-  repositories {
-    google()
-    jcenter()
-  }
+    repositories {
+        google()
+        jcenter()
+    }
 
-  dependencies {
-    classpath 'com.android.tools.build:gradle:3.4.2'
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.1.0-alpha02"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10"
 
-    // NOTE: Do not place your application dependencies here; they belong
-    // in the individual module build.gradle files
-  }
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
 }
 
-plugins {
-  id 'org.jetbrains.kotlin.jvm' version '1.3.31'
-}
+//plugins {
+//    id 'org.jetbrains.kotlin.jvm' version '1.4.21'
+//}
 
 allprojects {
-  repositories {
-    google()
-    jcenter()
-    maven { url "https://jitpack.io" }
-  }
+    repositories {
+        google()
+        jcenter()
+        maven { url "https://jitpack.io" }
+    }
 }
 
 repositories {
-  mavenCentral()
-}
-dependencies {
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-}
-compileKotlin {
-  kotlinOptions {
-    jvmTarget = "1.8"
-  }
-}
-compileTestKotlin {
-  kotlinOptions {
-    jvmTarget = "1.8"
-  }
+    mavenCentral()
 }
